--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">KeeganGeorge_A3</string>
     <string name="str_retrieve_random_num">Retrieve random numbers</string>
     <string name="str_clear">Clear</string>
+    <string name="str_numPlaceholder">___</string>
 </resources>
